--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
         "react-dom": "^18.2.0",
         "ts-jest": "^29.1.1",
         "ts-node": "^10.9.1",
-        "typescript": "^5.1.6"
+        "typescript": "^5.1.6",
+        "vite": "^4.5.0",
+        "vitest": "^0.34.6"
     },
     "dependencies": {
         "intl-number-input": "^1.4.1"
