--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
     "name": "@3dsteam/react-intl-number-input",
     "packageManager": "yarn@4.0.1",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "description": "A React component that allows to use input `type=number` with a localized format",
-    "main": "dist/index.js",
+    "type": "module",
+    "main": "dist/index.cjs",
+    "module": "dist/index.js",
     "types": "dist/index.d.ts",
     "files": [
         "dist",
@@ -14,8 +16,9 @@
     "author": "Lorenzo Bonatti <lorenzo.bonatti@3ds.team>",
     "license": "MIT",
     "scripts": {
-        "test": "jest --watchAll",
-        "build": "tsc"
+        "test": "vitest run",
+        "test:watch": "vitest",
+        "build": "tsc && vite build"
     },
     "peerDependencies": {
         "react": ">=18",
@@ -25,18 +28,18 @@
         "intl-number-input": "^1.4.1"
     },
     "devDependencies": {
+        "@rollup/plugin-node-resolve": "^15.2.3",
+        "@rollup/plugin-typescript": "^11.1.5",
         "@testing-library/jest-dom": "^6.1.4",
         "@testing-library/react": "^14.0.0",
-        "@types/jest": "^29.5.2",
         "@types/react": "^18.2.14",
-        "jest": "^29.6.1",
-        "jest-environment-jsdom": "^29.6.1",
+        "@vitejs/plugin-react": "^4.1.0",
+        "jsdom": "^22.1.0",
         "prettier": "^3.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "ts-jest": "^29.1.1",
-        "ts-node": "^10.9.1",
-        "typescript": "^5.1.6",
+        "tslib": "^2.6.2",
+        "typescript": "^5.2.2",
         "vite": "^4.5.0",
         "vitest": "^0.34.6"
     }
